# Teoria-de-la-computacion-actividad-1

./: CHANGELOG.md  README.md  teoria-de-la-computacion.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/d30e410b/: cabal_macros.h
src/: ChurchBool.hs  Main.hs
